# Trade-Compliance-Project

./: README.md  plan.md  pyproject.toml  requirements.txt
compliance_router/: __init__.py  __main__.py  config.py  models.py  nodes.py  router.py  web.py
compliance_router/static/: index.html
tests/: test_router.py  test_web.py
